go-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: ghcr.io/benc-uk/vuego-demoapp:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: go-app  
spec:
  type: ClusterIP
  ports:
  - port: 4000
  selector:
    app: go-app
